js/src/tests/test262/language/expressions/dynamic-import/syntax/valid/nested-arrow-import-source-script-code-valid.js
var
smoosh
;
function
smoosh
(
)
{
}
let
f
=
(
)
=
>
{
import
.
source
(
'
<
module
source
>
'
)
;
}
;
reportCompare
(
0
0
)
;
