js/src/tests/test262/language/expressions/dynamic-import/syntax/invalid/nested-async-function-await-not-extensible-args.js
DONOTEVALUATE
(
)
;
async
function
f
(
)
{
await
import
(
'
.
/
empty_FIXTURE
.
js
'
{
}
'
'
)
;
}
